# omni-research

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json
reports/: report_Ghi_nhớ_hiệu_quả.md  report_Test_quy_trình_tự_độ.md  report_cuộc_sống_năng_suất.md  test_phase_1.md
src/: state.py
src/agents/: researcher.py  supervisor.py  writer.py
src/model/: llm.py
src/tools/: file_tools.py  search_tools.py
src/utils/: exception.py  logger.py
test/: test_phase1.py  test_pull_flow.py  test_researcher.py  test_writer.py
